--- a/css-part 1/10.TExt align property/index.html
+++ b/css-part 1/10.TExt align property/index.html
@@ -15,6 +15,7 @@
        <h3>premiere</h3>
        <P>Iron man's marvel premiere in tales of suspense #39 (cover data March 1963) was  a collaboration among editor and story-plotter Stan Lee , scripter Larry lieber ,story artists Don heck , and cover artists and the character designer</P>
        <hr>
+       <p>Rachod das chachad.</p>
 
 </body>
 </html>
